# agent-memory-proxy

./: .amp.yaml  .coverage  .gitignore  AGENT.md  LICENSE  MEMORY.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
scripts/: install.bat  install.sh
scripts/daemons/: agent-memory-proxy.service  com.agent-memory-proxy.plist
src/: __init__.py  config.py  constants.py  file_ops.py  log.py  logging.py  main.py  sync.py  watcher.py
tests/: AGENT.md  conftest.py  test_config.py  test_file_ops.py  test_sync.py
